feat: add base url to work with github pages

--- a/web/src/components/Header.astro
+++ b/web/src/components/Header.astro
@@ -37,7 +37,7 @@ const printButtonLabel = (
   <div class="languages">
     {
       resumes.map((resume) => (
-        <a href={`/${resume.slug}`}>{resume.data.languageLabel}</a>
+        <a href={`/athenacfr/${resume.slug}`}>{resume.data.languageLabel}</a>
       ))
     }
   </div>
