--- a/web/src/components/Head.astro
+++ b/web/src/components/Head.astro
@@ -8,7 +8,7 @@ interface Props {
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const thumbnailURL = new URL("/thumbnail.jpg", Astro.url);
+const thumbnailURL = new URL("/athenacfr/thumbnail.jpg", Astro.url);
 
 const { title, description } = Astro.props;
 ---
@@ -16,7 +16,7 @@ const { title, description } = Astro.props;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/svg+xml" href="/athenacfr/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Canonical URL -->
